2002-10-11  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-canvas.h: Changed object type to SPCanvas, cleanup

	* src/helper/sp-canvas.c: Ditto

2002-10-10  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-canvas.c: Local version of praised GnomeCanvas

	* src/helper/sp-canvas.h: Local version of praised GnomeCanvas

	* src/libnr/nr-gradient.c (nr_rgradient_render_generic_symmetric): Optimize

2002-10-09  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-blit.c (nr_blit_pixblock_mask_rgba32): New method

	* src/libnr/nr-gradient.c (nr_rgradient_renderer_setup): Do r == 0 correctly
	(nr_rgradient_render_generic_optimized): Optimize
	(nr_rgradient_render_block_end): New method

	* configure.in: Version 0.28pre

2002-10-09  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Version 0.27

	* src/text-context.c (sp_text_context_root_handler): Only turn off unimode,
	if there really is string associated with key

2002-10-09  Masatake YAMATO  <jet@gyve.org>

	* src/sp-image.c (load_splines): changed the order
	of arguments. this change is for frontline-0.5.3.

	* configure.in: required frontline-0.5.3.
	To build sodipodi with frontline you have to get:
	http://autotrace.sourceforge.net/snapshots/autotrace-0.30.8.tar.gz
	http://autotrace.sourceforge.net/frontline/frontline-0.5.3.tar.gz

2002-10-08  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/widgets/gradient-position.c (sp_gradient_position_motion_notify): Do
	not mess with lineargradient skew

	* src/sp-ellipse.c (sp_arc_modified): Continue upstream

2002-10-07  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-text.c: Moved frontends here

	* src/dialogs/node-edit.h: Moved declarations here

	* src/desktop.c (sp_desktop_widget_view_position_set): Use grid placement
	(sp_desktop_widget_namedview_modified): Read grid placement
	(sp_desktop_widget_update_rulers): Use grid placement
	(sp_desktop_set_coordinate_status): Disable, until sorted out
