@@ -3,22 +3,6 @@
 	* es.po: Updated Spanish translation by
 	jose antonio s.a. <joseantonio@salgueiro.c.telefonica.net>
 
-2002-10-06  gettextize  <bug-gnu-utils@gnu.org>
-
-	* Makefile.in.in: Upgrade to gettext-0.10.40.
-
-2002-10-06  gettextize  <bug-gnu-utils@gnu.org>
-
-	* Makefile.in.in: Upgrade to gettext-0.10.40.
-
-2002-10-06  gettextize  <bug-gnu-utils@gnu.org>
-
-	* Makefile.in.in: Upgrade to gettext-0.10.40.
-
-2002-10-06  gettextize  <bug-gnu-utils@gnu.org>
-
-	* Makefile.in.in: Upgrade to gettext-0.10.40.
-
 2002-10-01  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* POTFILES.in: Added src/widgets/font-selector.c
